package streaming.exceptions;

public class InValidUsernameException extends Exception {
    public InValidUsernameException(String errorMessage) {
        super(errorMessage);
    }
}
